<resources>
    <string name="app_name">Project</string>
    <string name="search">Search</string>
    <string name="network_error">Network Error</string>
    <string name="internal_server_error">Internal Server Error</string>
    <string name="search_for_img">Search for images</string>
    <string name="something_went_wrong">Something went wrong, please try again</string>
    <string-array name="image_loader">
        <item>app_logo</item><!--app logo 0 -->
        <item>flag</item><!--flag  1 -->
        <item>girl</item><!--flag  2 -->
        <item>man</item><!--flag  3 -->
        <item>user</item><!--flag  4 -->
        <item>other image</item><!--other image-->
    </string-array>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="forcefully_enable_permission">You have forcefully denied some of the required permissions for this action.\nPlease go to permissions and allow them.</string>
    <string name="no_network_msg"><![CDATA[Please check your internet connection &amp; try again]]></string>
    <string name="dummyText">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmood tempor inciddidunt ut labore et dolore magna sed do sed do aliqua.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="loading">Loading...</string>
</resources>